--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <img src="img/kaolle-logo.png" alt="logo">
+                <img src="img/kaolle-logo.png" alt="logo" width="100px">
                 <h1 class="fw-bold text-primary m-0">KAOLLE<span class="text-white">Foundation</span></h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
