--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-            <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
+            <a href="index.html" class="navbar-brand ms-4 ms-lg-0 flex-logo">
                 <img src="img/kaolle-logo.png" alt="logo" width="100">
                 <h1 class="fw-bold text-primary m-0">KAOLLE<span class="text-white">Foundation</span></h1>
             </a>
