--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">About Us</div>
+                        <div class="d-inline-block rounded-pill bg-secondary text-light py-1 px-3 mb-3">About Us</div>
                         <h1 class="display-6 mb-5">Creating Lasting Changes In Our Communities Together.</h1>
                         <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
                             <p class="text-dark mb-2">The Kaolle Foundation uplifts underserved communites through personal development programs and community driven initiatives.</p>
@@ -179,7 +179,7 @@
     <div class="container-xxl bg-light my-5 py-5" id="causes">
         <div class="container py-5">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Feature Causes</div>
+                <div class="d-inline-block rounded-pill bg-secondary text-light py-1 px-3 mb-3">Feature Causes</div>
                 <h1 class="display-6 mb-5">Problems We Solve and Our Impact</h1>
             </div>
             <div class="row g-4 justify-content-center">
@@ -259,7 +259,7 @@
     <div class="container-xxl py-5" id="services">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">What We Do</div>
+                <div class="d-inline-block rounded-pill bg-secondary text-light py-1 px-3 mb-3">What We Do</div>
                 <h1 class="display-6 mb-5">Learn More What We Do And Get Involved</h1>
             </div>
             <div class="row g-4 justify-content-center">
@@ -312,7 +312,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">Contact Us</div>
+                    <div class="d-inline-block rounded-pill bg-secondary text-light py-1 px-3 mb-3">Contact Us</div>
                     <h1 class="display-6 mb-5">If You Have Any Query, Please Contact Us</h1>
                     <p class="mb-4">We're here to answer any questions and provice the support you need.</p>
                     <form>
