--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0 flex-logo" style="display: flex; align-items: center;">
-               <img src="img/kaolle-transparent.png" alt="logo" width="200">
+               <img src="img/logo-transparent.png" alt="logo" width="200">
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
